--- a/css/style.css
+++ b/css/style.css
@@ -24,13 +24,16 @@ body {
 }
 
 .productive {
-  text-align: center;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .productive .productive1 img {
@@ -39,11 +42,13 @@ body {
 }
 
 .productive .productive1 h2 {
+  font-size: 25px;
   font-weight: 700;
   margin: 0;
+  padding: 50px;
 }
 
-.productive .productive1 p {
+.productive .productive1 .productivep p {
   height: 35px;
   margin: auto;
   font-weight: 400px;
@@ -66,6 +71,16 @@ body {
 }
 
 @media (max-width: 768px) {
+  .testimonio {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    font-size: 16px;
+  }
+}
+
+@media (max-width: 1200px) {
   .testimonio {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -104,14 +119,52 @@ section.early {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   background: #1c2431;
   height: 200px;
-  width: 1000px;
+  margin: 0 auto;
+  width: 800px;
   border-radius: 2%;
+  -webkit-filter: drop-shadow(8px 5px 5px #0b1523);
+          filter: drop-shadow(8px 5px 5px #0b1523);
+  text-align: center;
+  margin-top: 10px;
+}
+
+section.early h2 {
+  font-size: 30px;
+  margin-top: 35;
+}
+
+section.early p {
+  padding: 3%;
 }
 
 footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   background-color: #0b1523;
-  height: 300px;
+  bottom: 0px;
+  height: 250px;
+  width: 100%;
+}
+
+footer img {
+  height: 20%;
+  width: 24%;
+}
+
+footer .contenedorprin {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 10px;
+}
+
+footer .izqcolumn {
+  width: 45%;
 }
 /*# sourceMappingURL=style.css.map */
