--- a/css/style.scss
+++ b/css/style.scss
@@ -28,29 +28,31 @@ body{
     }
     color:$neutro
 }
-.productive{
-    
-    text-align:center;
+.productive {
     display: flex;
-    align-items: center;
+   align-items: center;
+   flex-direction: column; 
+   
     
 }
 
 .productive .productive1 {
+
     
      img{
     margin-top: 10px;
-    margin-left: 2%;   
+    margin-left: 2%; 
     
-   }
+    }
   
    h2 {
-        
+        font-size: 25px;
         font-weight: 700;
         margin: 0; 
+        padding: 50px;
     }
 
-    p{
+   .productivep p{
         
         height: 35px;
         margin:  auto;
@@ -65,6 +67,11 @@ display: flex;
 align-items: center;
 justify-content: space-evenly;
 @media (max-width:768px) {
+    flex-direction:column;
+    font-size: 16px;
+    }
+
+@media (max-width:1200px){
     flex-direction:column;
     
 }
@@ -95,19 +102,58 @@ justify-content: space-evenly;
 
 section.early{
     display: flex;
-    
+    align-items: center;
     background: $email;
     height: 200px;
-    width: 1000px;
+    margin:0 auto;
+    width: 800px;
     border-radius: 2%;
+    filter:drop-shadow(8px 5px 5px $footer);
+    text-align:center;
+    margin-top: 10px;
+
+    h2{
+        font-size: 30px;
+        margin-top: 35;
+    }
+    
+    p {
+        padding: 3%;
+    }
+    
     }
 
 
 
+
 footer{
+    display: flex;
     background-color: $footer;
-    height: 300px;
+    bottom: 0px;
+    height: 250px;
+    width: 100%;
 }
+
+footer img {
+    height: 20%;
+    width: 24%;
+  
+}
+
+footer .contenedorprin {
+  
+    display: flex;
+    padding: 10px;
+}
+
+footer .izqcolumn{
+
+    width: 45%;
+    
+}
+
+
+
 
 button .footer {
     
