--- a/css/style.scss
+++ b/css/style.scss
@@ -15,42 +15,47 @@ $neutro:hsl(0, 0%, 100%);
     box-sizing: border-box;
     
     
-   
-}
+  }
+
+
+
 body{
     font-family: 'Open Sans', sans-serif;
     font-family: 'Raleway', sans-serif;
-    @media screen and (max-width:2000px) and (min-width:200px) {
-        background-color: $darkblueback;
-    }
-    @media screen and (max-width:200px){
-        font-size: 12px;
+    // // @media screen and (max-width:2000px) and (min-width:200px) {
+    //     background-color: $darkblueback;
+    // }
+    // @media screen and (max-width:200px){
+    //     font-size: 12px;
         
-    }
+    // }
+    background-color: $darkblueback;
 
     color:$neutro
 }
 
 .productive {
-   padding: 30px;  
-}
+width: 100%;
+background-color: $darkblueback;
 
+}
+ 
 .productive .productive1 {
-  
+  width: 100%;
   display:flex;
-  flex-wrap: wrap;
   justify-content: space-evenly;
   align-items: center;
+ 
+ flex-direction: row;
+  padding: 5%;
 
-
-  .productivep {
- max-width: 500px;
-
-  }
-
+.productivep {
+  padding: 5%;
+}
  
  h2 {
-     font-size: 50px;
+     
+    font-size: 50px;
      margin-bottom: 25px;
 
  }
@@ -63,16 +68,21 @@ body{
  .p2 {
     margin-bottom: 25px;
  }
-  
+  img {
+    display: flex;
+    width: 50%;
+  }
 
 }
 
 
 .testimonio {
+background-color: $darkblueback;
 display: flex;
 align-items: center;
 justify-content: space-evenly;
-margin-bottom: 140px;
+margin-bottom: 90px;
+
 @media (max-width:768px) {
     flex-direction:column;
     font-size: 16px;
@@ -114,18 +124,22 @@ margin-bottom: 140px;
     flex-wrap: wrap;
 }
 
-.early{
-    display: flex;
+.early {
+  display: flex;
     align-items: center;
     background: $email;
     height: 250px;
     margin:0 auto;
-    width: 50%;
+    width: 60%;
     border-radius: 2%;
     filter:drop-shadow(8px 5px 5px $footer);
     text-align:center;
     margin-bottom: -100px;
-
+    
+    
+    
+ 
+   
     h2{
         font-size: 200%;
         margin-top: 35;
@@ -155,7 +169,7 @@ margin-bottom: 140px;
             width: 25%;
             height: 50px;
             border-radius: 25px;
-            text-align: center;
+         
             color: $neutro;
             background-image: linear-gradient(to right, #00d2ff 0%, #3a7bd5  51%, #00d2ff  100%);
             
@@ -192,39 +206,51 @@ margin-bottom: 140px;
 
 
 
-footer{
+
+    footer{
    
-    background-color: $footer;
-    padding:50px 0;
-}
-
-
+      background-color: $footer;
+      padding:2%;
+    }
+  
+  
+    footer .contenedorprin {
+  
+    max-width: 1800px;
+    margin-top: 90px;
+    padding: 0 20px;
+    display:flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-wrap: wrap;
    
+  }
+  
+  
+  footer .izqcolumn {
+      
+      width: 20%;
+      list-style: none;
+      margin-bottom: 5px;
+      margin-top: 10px;
+      padding: 30px 0px;
+      list-style: none;
 
+      .izqcolumn ul li 
 
-footer .contenedorprin {
+      .medio ul li {
+        list-style: none;
+      }
 
-  max-width: 1800px;
-  margin-top: 90px;
-  padding: 0 20px;
-  display:flex;
-  justify-content: space-evenly;
-  align-items: center;
-  flex-wrap: wrap;
+      .derecha ul li {
+        list-style: none;
+
+      }
+       
+  }
+  
+  
  
-}
-
-
-footer .izqcolumn{
-    
-    width: 20%;
-    list-style: none;
-    margin-bottom: 5px;
-    margin-top: 10px;
-    padding: 30px 0px;
-     
-}
-
 
 
 
