--- a/css/style.scss
+++ b/css/style.scss
@@ -2,20 +2,165 @@ $darkblueback: hsl(218, 28%, 13%);
 $email: hsl(217, 28%, 15%);
 $footer:hsl(216, 53%, 9%);
 $testimonio:hsl(219, 30%, 18%);
-$neutro:hsl(0, 0%, 100%)
-$ralewey: font-family: 'Raleway', sans-serif;
-$opensans: font-family: 'Open Sans', sans-serif;
+$neutro:hsl(0, 0%, 100%);
+$raleway: font-family 'Raleway', sans-serif;
+$opensans: font-family 'Open Sans', sans-serif;
+$Cyan:hsl(176, 68%, 64%);
+$Blue:hsl(198, 60%, 50%);
 
 
-*{
-    margin: 0 auto;
-    padding: 0;
-    box-sizing: border-box;
-    background-color: $darkblue;
-    @media screen and (max-width:1440px) and (min-width:375px){
-        background-color:$darkblue;
-    }
-        
-    }
+
+* {
+   margin: 0px;
+   padding: 0px;
+   box-sizing: content-box;
+   background-color: $darkblueback;
+   $raleway: font-family 'Raleway', sans-serif;
+   $opensans: font-family 'Open Sans', sans-serif;
+   
+    
+}    
+   
+.logo{
+   width: 20%;
+   height: 8%;
 }
+
+.header{
+   padding: 35px;
+   text-align: center;
+}
+
+.img-intro{
+   width: 50%;
+}
+
+
+
+nav{
+   display: flex;
+   justify-content: space-between;
+   flex-direction: row;
+   margin-left: 50px;
+   margin-top: 10px;
+
+   div ul{
+      display: flex;
+      justify-content: space-between;
+      padding: 7px;
+      width: 50%;
+      list-style:none;
+      
+   }
+
+   ul li a{
+      justify-content: space-evenly;
+      padding: 20px 80px;
+      flex-direction: row;
+      text-decoration: none;
+      color: $neutro;
+      display: block;
+
+   }
+
+   a:hover{
+      background: $neutro;
+      color: $footer;
+      transition: 0.4s;
+      border-radius: 50px;
+   }
+}
+
+.div-2{
+   align-content: space-between;
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   margin-top: 40px;
+
+   h1 {
+      color: $neutro;
+   }
+   p{
+      color: $neutro;
+
+   }
+   
+   .btn-1{
+      padding: 20px 80px;
+      border-radius: 50px;
+      margin-top: 20px; 
+      background-color:$Blue;
+      color: $neutro;
+   }
+
+}
+
+.img1-4{
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   padding: 35px;
+   text-align: center;
+
+
+   .img-1{
+      color: $neutro;
+      text-align: center;
+      margin-bottom: 35px;
+      margin-top: 35px;
+  
+   }
+   @media screen and ( min-width: 768px){
+      .flex-container{
+         display: flex;
+         justify-content: space-between;
+         align-items: center;
+      }
+      
+   }
+   
+
+}
+
+.mypc{
+   height: 10%;
+   width: 10%;
+   margin-left: 20%;
+}
+
+
+
+
+.sec{
+   height: 10%;
+   width: 10%;
+   margin-bottom: 50%;
+   margin-left: 60%;
+
+}
+
+
+  
+
+   .coll{
+      height: 10%;
+      width: 10%;
+   }
+
+   
+
+      .file{
+         height: 10%;
+         width: 10%;
+      }
+
+      
+
+            
+
+                            
+      
+   
+
 
