--- a/css/style.css
+++ b/css/style.css
@@ -6,10 +6,16 @@
 }
 
 body {
-  font-family: 'Open Sans', sans-serif;
-  font-family: 'Raleway', sans-serif;
+  font-family: "Open Sans", sans-serif;
+  font-family: "Raleway", sans-serif;
   background-color: #181f2a;
   color: white;
+}
+
+@media (max-width: 200px) {
+  body {
+    font-size: 12px;
+  }
 }
 
 .productive {
@@ -17,46 +23,66 @@ body {
   background-color: #181f2a;
 }
 
-.productive .productive1 {
-  width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
+@media (min-width: 1000px) {
+  .productive .productive1 {
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    padding: 5%;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+
+@media (min-width: 375px) {
+  .productive {
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    padding: 4%;
+  }
+}
+
+.productive .productivep {
   padding: 5%;
 }
 
-.productive .productive1 .productivep {
-  padding: 5%;
-}
-
-.productive .productive1 h2 {
+.productive h2 {
   font-size: 50px;
   margin-bottom: 25px;
 }
 
-.productive .productive1 .p1 {
+.productive .p1 {
   margin-bottom: 25px;
 }
 
-.productive .productive1 .p2 {
+.productive .p2 {
   margin-bottom: 25px;
 }
 
-.productive .productive1 img {
+.productive img {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  width: 50%;
+  width: 100%;
+}
+
+.productive .p3 {
+  color: #65e2d9;
+  border-color: #65e2d9;
 }
 
 .testimonio {
@@ -80,6 +106,13 @@ body {
         -ms-flex-direction: column;
             flex-direction: column;
     font-size: 16px;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .testimonio .comillas {
+    left: auto;
+    top: -20px;
   }
 }
 
@@ -105,12 +138,27 @@ body {
           align-items: center;
 }
 
+.testimonio .nombre {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding-left: 12px;
+}
+
 .testimonio article {
   background: #202a3c;
   padding: 37px;
   margin: 15px;
   height: 220px;
   width: 400px;
+  position: relative;
+}
+
+.comillas {
+  position: absolute;
+  left: -1%;
+  top: -20px;
 }
 
 .testimonio article img {
@@ -141,6 +189,7 @@ body {
   height: 250px;
   margin: 0 auto;
   width: 60%;
+  min-width: 400px;
   border-radius: 2%;
   -webkit-filter: drop-shadow(8px 5px 5px #0b1523);
           filter: drop-shadow(8px 5px 5px #0b1523);
@@ -203,41 +252,119 @@ body {
 
 footer {
   background-color: #0b1523;
-  padding: 2%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 footer .contenedorprin {
-  max-width: 1800px;
-  margin-top: 90px;
-  padding: 0 20px;
+  margin-top: 150px;
+  max-height: 2000px;
+  min-height: 300px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: space-evenly;
       -ms-flex-pack: space-evenly;
           justify-content: space-evenly;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+  color: white;
+  margin-left: 8%;
+}
+
+footer .contenedorprin .medio {
+  margin-top: 50px;
+}
+
+footer .contenedorprin .redes {
+  margin-top: 50px;
+}
+
+@media (max-width: 900px) {
+  footer .contenedorprin {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  footer .contenedorprin footer .contenedorprin {
+    max-height: 12222000px;
+  }
+  footer .contenedorprin .izqcolumn img {
+    margin-bottom: 20px;
+  }
+  footer .contenedorprin .bullet-3 {
+    padding-right: 70px;
+    padding-left: 15px;
+    width: 450%;
+  }
+  footer .contenedorprin .medio1 {
+    padding-left: 15px;
+    margin-bottom: 20px;
+  }
+  footer .contenedorprin .medio1 .bullet {
+    margin-bottom: 25px;
+  }
+  footer .contenedorprin .medio1 .derecha {
+    padding-left: 15px;
+    margin-bottom: 20px;
+  }
+  footer .contenedorprin .medio1 .contacto {
+    padding-left: 15px;
+  }
+  footer .contenedorprin .redes {
+    margin-top: 50px;
+    padding-left: 120px;
+    padding-bottom: 20px;
+  }
 }
 
 footer .izqcolumn {
-  width: 20%;
-  list-style: none;
-  margin-bottom: 5px;
-  margin-top: 10px;
-  padding: 30px 0px;
+  width: 25%;
   list-style: none;
 }
 
-footer .izqcolumn .izqcolumn ul li
-.medio ul li {
-  list-style: none;
+footer .izqcolumn .izqcolumn ul li {
+  color: white;
 }
 
-footer .izqcolumn .derecha ul li {
+footer .izqcolumn .medio li {
+  color: white;
+}
+
+footer .izqcolumn .medio1 ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+footer .izqcolumn .derecha li {
+  text-decoration: none;
+  color: white;
+}
+
+.enlace {
+  color: white;
   list-style: none;
+  padding: 20px;
+}
+
+.bullet {
+  list-style: url(../images/icon-phone.svg);
+  margin-bottom: 10px;
+}
+
+.bullet1 {
+  list-style: url(../images/icon-email.svg);
+}
+
+.bullet3 {
+  width: 100%;
+  list-style: url(../images/icon-location.svg);
 }
 /*# sourceMappingURL=style.css.map */
