--- a/css/style.css
+++ b/css/style.css
@@ -7,8 +7,29 @@
 }
 
 .logo {
-  width: 20%;
-  height: 8%;
+  width: 100px;
+  height: 80px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+@media screen and (min-width: 300px) {
+  .logo .flex-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
 }
 
 .header {
@@ -28,11 +49,13 @@ nav {
       -ms-flex-pack: justify;
           justify-content: space-between;
   -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
+  -webkit-box-direction: reverse;
+      -ms-flex-direction: row-reverse;
+          flex-direction: row-reverse;
   margin-left: 50px;
   margin-top: 10px;
+  -ms-flex-direction: column;
+      flex-direction: column;
 }
 
 nav div ul {
@@ -48,6 +71,9 @@ nav div ul {
 }
 
 nav ul li a {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   -webkit-box-pack: space-evenly;
       -ms-flex-pack: space-evenly;
           justify-content: space-evenly;
