--- a/css/style.scss
+++ b/css/style.scss
@@ -25,8 +25,11 @@ $Blue:hsl(198, 60%, 50%);
 }    
    
 .logo{
-   width: 20%;
-   height: 8%;
+   width: 100px;
+   height: 80px;
+   display: flex;
+   flex-direction: column;
+
 }
 
 .header{
@@ -42,10 +45,14 @@ $Blue:hsl(198, 60%, 50%);
 
 nav{
    display: flex;
-   justify-content: space-between;
-   flex-direction: row;
+   justify-content:space-between;
+   flex-direction: row-reverse;
    margin-left: 50px;
    margin-top: 10px;
+   flex-direction: column;
+
+  
+
 
    div ul{
       display: flex;
@@ -57,6 +64,7 @@ nav{
    }
 
    ul li a{
+      display: flex;
       justify-content: space-evenly;
       padding: 20px 80px;
       flex-direction: row;
