--- a/css/style.scss
+++ b/css/style.scss
@@ -57,6 +57,7 @@ body {
 }
 .img-intro {
   width: 50%;
+  margin-bottom: 20px;
 }
 nav {
   display: flex;
@@ -71,7 +72,9 @@ nav {
       display: flex;
       justify-content: space-between;
       align-items: center;
+
     }
+    
   }
 
   div ul {
@@ -106,16 +109,24 @@ nav {
   margin-top: 40px;
   h1 {
     color: $neutro;
+    margin-top: 20px;
   }
   p {
     color: $neutro;
+    
   }
   .btn-1 {
+    
     padding: 20px 80px;
     border-radius: 50px;
     margin-top: 20px;
     background-color: $Blue;
     color: $neutro;
+    
+  }
+  .btn-1:hover{
+    color:$footer;
+    background:$neutro;
   }
 }
 
@@ -142,23 +153,49 @@ nav {
 }
 
 .mypc {
-  height: 10%;
-  width: 10%;
-  margin-left: 20%;
+  height: 5%;
+  width: 5%;
+  margin-left: 60%;
+  
 }
+
+.parrafo{
+  padding-left: 20%;
+  padding-right: 20%;
+  margin-left: 15px;
+}
+
+.parrafo2{
+  padding-left: 20%;
+  padding-right: 20%;
+  margin-left: 15px;
+}
+
+.parrafo3{
+  padding-left: 20%;
+  padding-right: 20%;
+  margin-left: 15px;
+}
+
+.parrafo4{
+  padding-left: 20%;
+  padding-right: 20%;
+  margin-left: 15px;
+}
+
 .sec {
-  height: 10%;
-  width: 10%;
+  height: 5%;
+  width: 5%;
   margin-bottom: 50%;
   margin-left: 60%;
 }
 .coll {
-  height: 10%;
-  width: 10%;
+  height: 5%;
+  width: 5%;
 }
 .file {
-  height: 10%;
-  width: 10%;
+  height: 5%;
+  width: 5%;
 }
 
 .productive {
